[gd_scene load_steps=9 format=2]

[ext_resource path="res://Vyfrost/Assets/Theme/SelectOption/SelectArrow - Hover-Focused.tres" type="StyleBox" id=1]
[ext_resource path="res://Vyfrost/Assets/Theme/VyfrostTheme.tres" type="Theme" id=2]
[ext_resource path="res://Vyfrost/Assets/Theme/SelectOption/SelectArrow - Normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Vyfrost/Components/FormElements/SelectOption.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="SelectOption" type="HBoxContainer"]
offset_right = 194.0
offset_bottom = 12.0
mouse_filter = 2
theme = ExtResource( 2 )
theme_override_constants/separation = 17
alignment = 2
script = ExtResource( 4 )

[node name="SelectTitle" type="Label" parent="."]
offset_right = 70.0
offset_bottom = 12.0
size_flags_horizontal = 3
text = "Playstyle"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 87.0
offset_right = 194.0
offset_bottom = 12.0
custom_minimum_size = Vector2( 94, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="LeftArrow" type="Button" parent="HBoxContainer"]
offset_right = 13.0
offset_bottom = 12.0
focus_neighbor_right = NodePath("../RightArrow")
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme_override_styles/hover = ExtResource( 1 )
theme_override_styles/pressed = SubResource( 1 )
theme_override_styles/focus = ExtResource( 1 )
theme_override_styles/disabled = SubResource( 3 )
theme_override_styles/normal = ExtResource( 3 )
text = "<"
flat = true

[node name="ItemSelected" type="Label" parent="HBoxContainer"]
offset_left = 17.0
offset_right = 90.0
offset_bottom = 12.0
size_flags_horizontal = 3
text = "Chill"
align = 1

[node name="RightArrow" type="Button" parent="HBoxContainer"]
offset_left = 94.0
offset_right = 107.0
offset_bottom = 12.0
focus_neighbor_left = NodePath("../LeftArrow")
mouse_default_cursor_shape = 2
theme_override_styles/hover = ExtResource( 1 )
theme_override_styles/pressed = SubResource( 4 )
theme_override_styles/focus = ExtResource( 1 )
theme_override_styles/disabled = SubResource( 6 )
theme_override_styles/normal = ExtResource( 3 )
text = ">"

[connection signal="focus_entered" from="HBoxContainer/LeftArrow" to="." method="_on_LeftArrow_focus_entered"]
[connection signal="mouse_entered" from="HBoxContainer/LeftArrow" to="." method="_on_LeftArrow_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="focus_entered" from="HBoxContainer/RightArrow" to="." method="_on_RightArrow_focus_entered"]
[connection signal="mouse_entered" from="HBoxContainer/RightArrow" to="." method="_on_RightArrow_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/RightArrow" to="." method="_on_RightArrow_pressed"]
